# arc-capitan-theme

./: README.md  arc-theme-upgrade
common/: Makefile.am  index.theme
common/gtk-3.0/3.18/: gtk-dark.css  gtk-darker.css  gtk-solid-dark.css  gtk-solid-darker.css  gtk-solid.css  gtk.css
common/gtk-3.0/3.18/sass/: _applications.scss  _colors.scss  _common.scss  _transparent_widgets.scss  _unity.scss
extra/Chrome/arc-darker-theme/: manifest.json
gtk-3.0/: gtk-dark.css  gtk.css
